# Meridain_chatBot

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: .env  .env.example  README.md  deploy.py  lambda_handler.py  pyproject.toml
backend/.lambda_build/: lambda_handler.py
backend/.lambda_build/app/: config.py  mcp_client.py  security.py
backend/.lambda_build/fastapi-0.136.1.dist-info/: RECORD
backend/.lambda_build/jsonschema-4.26.0.dist-info/: RECORD
backend/.lambda_build/mcp-1.27.0.dist-info/: RECORD
backend/.lambda_build/pydantic_core-2.46.3.dist-info/: RECORD
backend/.lambda_build/uvicorn-0.46.0.dist-info/: RECORD
backend/app/: __init__.py  config.py  context.py  conversation_memory.py  logging_config.py  main.py  mcp_client.py  orchestrator.py  schemas.py
backend/tests/: conftest.py  test_config.py  test_logging_config.py  test_main.py  test_mcp_client_helpers.py  test_orchestrator.py  test_rate_limit.py  test_run.py  test_schemas.py  test_security.py
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/backend/: .lambda_requirements_export.txt
frontend/backend/.lambda_build/app/: main.py  orchestrator.py
frontend/backend/.lambda_build/cryptography-47.0.0.dist-info/: RECORD
frontend/backend/.lambda_build/distro-1.9.0.dist-info/: RECORD
frontend/backend/.lambda_build/httpx-0.28.1.dist-info/: RECORD
frontend/backend/.lambda_build/mangum-0.21.0.dist-info/: RECORD
frontend/backend/.lambda_build/openai-2.33.0.dist-info/: RECORD
frontend/backend/.lambda_build/python_dotenv-1.2.2.dist-info/: RECORD
frontend/backend/app/: rate_limit.py
frontend/components/: ClerkHandshakeCleanup.tsx  chatBot.tsx
scripts/: deploy.ps1  destroy.ps1  ensure-terraform-backend.ps1  terraform-init.ps1
terraform/: main.tf  terraform.tfvars.example
(+4 files in other folders)
