[project]
name = "tool-augmented-ai-backend"
version = "0.1.0"
description = "FastAPI API Gateway and AI Orchestrator with MCP-only backend tool execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-json-logger",
    "openai",
    "mcp",
    "httpx",
]

[project.scripts]
backend = "app.main:app"

[tool.uv]
package = false
